--- a/html and css/css/style.css
+++ b/html and css/css/style.css
@@ -1,8 +1,20 @@
+:root {
+--large-text: #242A45;
+--small-text-color: #242A45;
+--primary-button: #5267DF;
+--orange-button: #FA5959;
+--site-footer-bg: #242A45;
+--footer-top-bg: #5267DF;
+}
+
 /* GLOBAL */
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
   height: 100%;
+}
+.small-text {
+  color: #242A45;
 }
 *,
 *::before
@@ -16,9 +28,9 @@ body {
   flex-direction: column;
   padding: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
-  font-family: "Arial", "sans-serif";
+  font-family: "Rubik", "Arial", "sans-serif";
   background-color: #fff;
   color: #222;
 }
@@ -29,7 +41,7 @@ img {
 
 /* CONTAINER */
 .container {
-  max-width: 1200;
+  max-width: 1000px;
   padding-left: 50px;
   padding-right: 50px;
   margin-left: auto;
@@ -37,6 +49,6 @@ img {
 }
 
 /* MAIN CONTENT */
-.main-container {
+.main-content {
   flex-grow: 1;
 }
