--- a/html and css/css/style.css
+++ b/html and css/css/style.css
@@ -1,10 +1,10 @@
 :root {
---large-text: #242A45;
---small-text-color: #242A45;
---primary-button: #5267DF;
---red: #FA5959;
---site-footer-bg: #242A45;
---footer-top-bg: #5267DF;
+  --large-text: #242A45;
+  --small-text-color: #242A45;
+  --primary-button: #5267DF;
+  --red: #FA5959;
+  --site-footer-bg: #242A45;
+  --footer-top-bg: #5267DF;
 }
 
 /* GLOBAL */
@@ -33,6 +33,7 @@ body {
   font-family: "Rubik", "Arial", "sans-serif";
   background-color: #fff;
   color: #222;
+  overflow-x: hidden;
 }
 img {
   max-width: 100%;
@@ -90,12 +91,13 @@ img {
 .button-gray {
   background-color: #f7f7f7;
   color:  var(--small-text-color);
-  opacity: 0.7;
+  opacity: 1;
 }
 .button-gray:hover {
   background-color: #fff;
   color: var(--large-text);
   border-color: var(--large-text);
+  opacity: 0.7;
 }
 .button-blue {
   background-color: var(--primary-button);
@@ -154,5 +156,51 @@ img {
   opacity: 1;
 }
 
-.button {
+/* hero */
+.hero {
+  padding-top: 66px;
+  padding-bottom: 105px;
+  background-image: url(../img/hero-bg.svg);
+  background-repeat: no-repeat;
+  background-position: calc(50% + 705px) 200px;
+}
+.hero__conatiner {
+  display: flex;
+  flex-shrink: 0;
+  align-items: flex-start;
+}
+.hero-content {
+  flex-shrink: 0;
+  width: 100%;
+  padding-top: 60px;
+  max-width: 540px;
+  margin-right: 65px;
+}
+.hero__title {
+  margin-top: 0;
+  font-size: 48px;
+  line-height: 52px;
+  color: var(--large-text);
+  margin-bottom: 24px;
+}
+.hero__text {
+  margin-top: 0;
+  color: var(--small-text-color);
+  opacity: 0.5;
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 32px;
+}
+.hero__button-wrapper {
+  display: flex;
+}
+.hero-button:not(:last-child) {
+  margin-right: 16px;
+}
+
+.hero-img {
+  flex-shrink: 0;
+  min-width: 578px;
+  width: auto;
+  height: auto;
 }
