--- a/html and css/css/style.css
+++ b/html and css/css/style.css
@@ -228,3 +228,43 @@ img {
   width: auto;
   height: auto;
 }
+
+/* TAbs */
+.tabs {
+  padding-top: 40px;
+}
+.tabs-list {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.tabs-item {
+  width: 243px;
+  height: 49px;
+  border-bottom: 1px solid rgb(73,93,207,20.01%);
+}
+.tabs-link {
+  display: block;
+  text-align: center;
+  color: var(--small-text-color);
+  opacity: 0.7;
+  border-bottom: 4px solid transparent;
+  font-size: 16px;
+  line-height: 17px;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+  align-items: center;
+}
+.tabs-item--active .tabs-link {
+  border-color: var(--red);
+  color: var(--small-text-color);
+}
+.tabs-link:hover {
+  color: var(--red);
+  opacity: 1;
+}
+.tabs-link:active {
+  opacity: 0.6;
+}
