--- a/html and css/css/style.css
+++ b/html and css/css/style.css
@@ -42,7 +42,6 @@ img {
 
 .section {
   padding-top: 75px;
-  padding-bottom: 75px;
 }
 .section-wrapper {
   text-align: center;
@@ -114,7 +113,7 @@ img {
 }
 .button-gray {
   background-color: #f7f7f7;
-  color:  var(--small-text-color);
+  color: var(--small-text-color);
   opacity: 1;
 }
 .button-gray:hover {
@@ -124,6 +123,7 @@ img {
   opacity: 0.7;
 }
 .button-blue {
+  width: auto;
   background-color: var(--primary-button);
   color: #fff;
 }
@@ -131,6 +131,80 @@ img {
   background-color: #fff;
   color: var(--primary-button);
   border-color: var(--primary-button);
+}
+
+/* accordion */
+.accordion {
+  border-top: 1px solid rgba(36, 42, 69, 0.15);
+}
+
+.accordion__item-open .accordion__item-content {
+  display: block;
+}
+.accordion__item-open .accordion__toggler-item-icon {
+  transform: rotate(180deg);
+  color: var(--red);
+}
+.accordion__item {
+  border-bottom: 1px solid rgba(36, 42, 69, 0.15);
+}
+.accordion__item-header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 13px;
+}
+
+.accordion__item-header:hover .accordion__item-header-title {
+  color: var(--red);
+}
+.accordion__item-header-title {
+  flex-grow: 1;
+  margin: 0;
+  margin-right: 24px;
+  font-style: 18px;
+  line-height: 32px;
+  font-weight: 400;
+  color: var(--small-text-color);
+}
+.accordion__item-toggler:focus {
+  outline: none;
+}
+.accordion__item-toggler:focus::before {
+  outline: auto;
+}
+.accordion__item-toggler {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+}
+.accordion__item-toggler::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  content: "";
+}
+.accordion__toggler-item-icon {
+  display: block;
+  width: 20px;
+  height: 13px;
+  color: var(--primary-button);
+}
+.accordion__item-content {
+  display: none;
+  padding-top: 19px;
+  padding-bottom: 29px;
+  color: var(--small-text-color);
+  font-size: 16px;
+  line-height: 36px;
+  opacity: 0.7;
+}
+.accordion__item-text {
+  margin: 0;
 }
 
 /* site header */
@@ -181,6 +255,7 @@ img {
 }
 
 /* hero */
+
 .hero {
   padding-top: 66px;
   padding-bottom: 105px;
@@ -323,4 +398,95 @@ img {
 }
 .tab-panel-avtive {
   display: block;
+}
+
+/* extension */
+
+.extensions__inner {
+  max-width: 910px;
+  display: contents;
+  margin-right: auto;
+}
+.extension__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  list-style: none;
+  margin-left: -35px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.extension__item {
+  width: 100%;
+  max-width: 280px;
+  margin-left: 35px;
+}
+.extension__item:nth-child(3n +2) {
+  margin-top: 80px;
+}
+.extension__item:nth-child(3n + 3) {
+  margin-top: 160px;
+}
+.extension {
+  position: relative;
+  max-width: 280px;
+  padding: 45px 2px 24px;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0px 10px 20px -5px rgba(73, 93, 207, 0.20012);
+}
+.extension::after {
+  background-image: url(../img/devider.svg);
+  position: absolute;
+  left: 0;
+  bottom: 96px;
+  width: 100%;
+  height: 4px;
+  content: "";
+}
+.extension-img {
+  display: block;
+  width: 105px;
+  height: 100px;
+  object-fit: contain;
+  margin-left: auto;
+  margin-right: auto;
+}
+.extension__title {
+  font-size: 20px;
+  line-height: auto;
+  letter-spacing: 0.25px;
+  margin-top: 32px;
+  color: var(--large-text);
+  margin-bottom: 6px;
+}
+.extension__text {
+  color: var(--small-text-color);
+  opacity: 0.5;
+  margin-top: 0;
+  font-size: 15px;
+  line-height: 28px;
+  margin-bottom: 58px;
+  background-position: center center;
+}
+
+/* faq */
+.faq {
+  padding-bottom: 150px;
+}
+.faq__inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.faq__accordion {
+  width: 100%;
+  margin-bottom: 54px;
 }
