--- a/html and css/css/style.css
+++ b/html and css/css/style.css
@@ -575,3 +575,48 @@ img {
 .subscription__field:placeholder-shown ~ .subscription__error {
   display: none;
 }
+
+/* site footer */
+.site-footer {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  background-color: var(--site-footer-bg);
+  color: #fff;
+}
+.site-footer__container {
+  display: flex;
+  align-items: center;
+}
+
+.site-footer__sitenav {
+}
+.site-footer__logo {
+  margin-right: 63px;
+}
+.sitenav__link-footer {
+  color: #fff;
+}
+.socials__list {
+  margin: 0;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+.socials__item {
+  cursor: pointer;
+}
+.socials__item:not(:last-child) {
+  margin-right: 40px;
+}
+.socials__link {
+  display: flex;
+  width: 24px;
+  height: 24px;
+}
+.socials__link:hover {
+  opacity: 0.8;
+}
+.socials__link:active {
+  opacity: 0.6;
+}
